[gd_scene load_steps=3 format=3 uid="uid://c4sk2axtie28d"]

[ext_resource type="Script" path="res://Scripts/Instances/voting_choice.gd" id="1_02mtu"]
[ext_resource type="Texture2D" uid="uid://dgxxkcjn22gl5" path="res://icon.svg" id="2_4bt71"]

[node name="VotingChoice" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_02mtu")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Drawing" type="TextureRect" parent="Container"]
layout_mode = 2
texture = ExtResource("2_4bt71")

[node name="VotesLeft" type="Control" parent="Container/Drawing"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2

[node name="VotesRight" type="Control" parent="Container/Drawing"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2

[node name="PlayerName" type="Label" parent="Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
text_overrun_behavior = 1
